mini-sock: Implement mini sock device
Mini sock MMIO device is a virtual device for guest VM to communicate with
services running in VMM host.  It's an alternative to virtio-vsock.  Send
payload to the service in host and receive payload from the service in the
host.  Qemu maps commands of the device to socket in the host.

The device accepts MMIO write of GPA of packet, and processes the packets
in order.  The packet carries a command and its payload.  Supported
commands are, REQUEST, RESPONSE, RST, SHUTDOWN, RW(SEND), RW(RECV).  The
following table shows the qemu mapping to unix datagram socket in host.

command         qemu behavior
------          -------------
REQUEST         socket() + bind() + connect() for unix dgram client socket
                socket() + bind() for unix dgram server socket
                socket() + bind() + connect() for stream client socket
                socket() + bind() + listen() for stream server socket
RESPONSE        accept() for stream server socket
SHUTDOWN        close()
RW(SEND)        send()
RW(RECV)        recv()
RST             reset device. repurposed this command for device, not for
                connection

For server side, Assign client cid/port based on underlying socket address.

Example:
-device mini-sock,id=msock0,path=/tmp/msock/client,mmio=0xfebff000,guest-cid=4,endpoints=server:4:43:dunix:/tmp/msock/server/test-4
-device mini-sock,id=msock0,path=/tmp/msock/client,mmio=0xfebff000,guest-cid=4,endpoints=client:5:44:dunix:/tmp/msock/server/test-5
-device mini-sock,id=msock0,path=/tmp/msock/client,mmio=0xfebff000,guest-cid=4,endpoints=server:4:10:unix:/tmp/msock/server/test-stream-4
-device mini-sock,id=msock0,path=/tmp/msock/client,mmio=0xfebff000,guest-cid=4,endpoints=client:5:11:unix:/tmp/msock/server/test-stream-5

Use ";"(semicolon) as delimiter to specify multiple endpoint.
Example:
-device mini-sock,id=msock0,path=/tmp/msock/client,guest-cid=4,endpoints=server:4:43:dunix:/tmp/msock/server/test-4;client:5:44

--- a/hw/virtio/meson.build
+++ b/hw/virtio/meson.build
@@ -2,6 +2,7 @@ softmmu_virtio_ss = ss.source_set()
 softmmu_virtio_ss.add(files('virtio-bus.c'))
 softmmu_virtio_ss.add(when: 'CONFIG_VIRTIO_PCI', if_true: files('virtio-pci.c'))
 softmmu_virtio_ss.add(when: 'CONFIG_VIRTIO_MMIO', if_true: files('virtio-mmio.c'))
+softmmu_virtio_ss.add(when: 'CONFIG_MINI_SOCK', if_true: files('mini-sock.c'))
 
 specific_virtio_ss = ss.source_set()
 specific_virtio_ss.add(files('virtio.c'))
